[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/spikes.tscn" type="PackedScene" id=2]
[ext_resource path="res://world/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://level_connections/15-16.tres" type="Resource" id=4]
[ext_resource path="res://enemies/Boss.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/Level_16.gd" type="Script" id=6]
[ext_resource path="res://world/TileMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://level_connections/16-18.tres" type="Resource" id=8]
[ext_resource path="res://CanvasLayer.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/altopixel.tres" type="DynamicFont" id=10]
[ext_resource path="res://UI/lowrextheme.tres" type="Theme" id=11]

[sub_resource type="RectangleShape2D" id=1]

[node name="Level_16" instance=ExtResource( 1 )]
scale = Vector2( 0.996469, 1.00327 )
script = ExtResource( 6 )

[node name="BossMeter" parent="." index="0" instance=ExtResource( 9 )]

[node name="SPIKES" type="Node2D" parent="." index="1"]

[node name="spikes" parent="SPIKES" index="0" instance=ExtResource( 2 )]
position = Vector2( 7, 114 )

[node name="spikes13" parent="SPIKES" index="1" instance=ExtResource( 2 )]
position = Vector2( 13, 114 )

[node name="spikes5" parent="SPIKES" index="2" instance=ExtResource( 2 )]
position = Vector2( 6, 23 )
rotation = 1.5708
scale = Vector2( 0.96896, 0.244872 )

[node name="spikes6" parent="SPIKES" index="3" instance=ExtResource( 2 )]
position = Vector2( 6, 29 )
rotation = 1.5708

[node name="spikes7" parent="SPIKES" index="4" instance=ExtResource( 2 )]
position = Vector2( 6, 35 )
rotation = 1.5708

[node name="spikes8" parent="SPIKES" index="5" instance=ExtResource( 2 )]
position = Vector2( 132, 25 )
rotation = -1.5708

[node name="spikes9" parent="SPIKES" index="6" instance=ExtResource( 2 )]
position = Vector2( 132, 31 )
rotation = -1.5708

[node name="spikes10" parent="SPIKES" index="7" instance=ExtResource( 2 )]
position = Vector2( 132, 37 )
rotation = -1.5708

[node name="spikes2" parent="SPIKES" index="8" instance=ExtResource( 2 )]
position = Vector2( 56, 114 )

[node name="spikes11" parent="SPIKES" index="9" instance=ExtResource( 2 )]
position = Vector2( 63, 114 )

[node name="spikes12" parent="SPIKES" index="10" instance=ExtResource( 2 )]
position = Vector2( 70, 114 )

[node name="spikes3" parent="SPIKES" index="11" instance=ExtResource( 2 )]
position = Vector2( 77, 114 )

[node name="spikes4" parent="SPIKES" index="12" instance=ExtResource( 2 )]
position = Vector2( 121, 114 )

[node name="spikes14" parent="SPIKES" index="13" instance=ExtResource( 2 )]
position = Vector2( 127, 114 )

[node name="TileMap" parent="." index="2"]
tile_data = PoolIntArray( 0, 3, 196612, 1, 3, 196613, 2, 3, 196613, 3, 3, 196613, 4, 3, 196613, 5, 3, 196613, 6, 3, 196613, 7, 3, 196613, 8, 3, 196613, 9, 3, 196613, 10, 3, 196613, 11, 3, 196613, 12, 3, 196613, 13, 3, 196613, 14, 3, 196613, 15, 3, 196613, 16, 3, 196613, 17, 3, 196613, 18, 3, 196613, 19, 3, 196613, 20, 3, 196613, 21, 3, 196613, 22, 3, 65543, 65558, 3, 65538, 131094, 3, 65538, 196608, 3, 65537, 196630, 3, 65538, 262144, 3, 65538, 262166, 3, 65538, 327680, 3, 65538, 327702, 3, 65538, 393216, 3, 65538, 393238, 3, 65538, 458752, 3, 65538, 458774, 3, 65538, 524288, 3, 65538, 524310, 3, 65538, 589824, 3, 65538, 589846, 3, 65538, 655360, 3, 65538, 655382, 3, 65538, 720896, 3, 65538, 720918, 3, 65538, 786432, 3, 262145, 786433, 3, 196614, 786454, 3, 65539, 851968, 3, 65538, 917504, 3, 65538, 983040, 3, 65538, 983050, 3, 196612, 983051, 3, 196613, 983052, 3, 196614, 983062, 3, 65537, 1048576, 3, 65538, 1048598, 3, 65538, 1114112, 3, 65538, 1114117, 3, 1, 1114118, 3, 3, 1114128, 3, 1, 1114129, 3, 65542, 1114130, 3, 2, 1114131, 3, 3, 1114134, 3, 65538, 1179648, 3, 65538, 1179651, 3, 1, 1179652, 3, 65542, 1179653, 3, 131078, 1179654, 3, 131077, 1179655, 3, 65542, 1179656, 3, 3, 1179662, 3, 1, 1179663, 3, 2, 1179664, 3, 131078, 1179665, 3, 0, 1179666, 3, 0, 1179667, 3, 4, 1179670, 3, 65538, 1245184, 3, 196608, 1245185, 3, 196613, 1245186, 3, 196613, 1245187, 3, 196610, 1245188, 3, 6, 1245189, 3, 6, 1245190, 3, 6, 1245191, 3, 6, 1245192, 3, 196609, 1245193, 3, 196613, 1245194, 3, 196613, 1245195, 3, 196613, 1245196, 3, 196613, 1245197, 3, 196613, 1245198, 3, 196610, 1245199, 3, 6, 1245200, 3, 6, 1245201, 3, 6, 1245202, 3, 6, 1245203, 3, 196609, 1245204, 3, 196613, 1245205, 3, 196613, 1245206, 3, 196611 )

[node name="Door" parent="." index="3" instance=ExtResource( 3 )]
position = Vector2( -3, 12 )
scale = Vector2( -1, 1 )
connection = ExtResource( 4 )
next_level = "res://levels/Level_15.tscn"

[node name="Door2" parent="." index="4" instance=ExtResource( 3 )]
position = Vector2( 141, 84 )
rotation = 3.14159
scale = Vector2( -1, 1 )
connection = ExtResource( 8 )
next_level = "res://levels/Level_18.tscn"

[node name="Boss" parent="." index="5" instance=ExtResource( 5 )]
position = Vector2( 69, 48 )

[node name="DOOR" parent="." index="6" instance=ExtResource( 7 )]
collision_layer = 0
tile_data = PoolIntArray( 65536, 3, 65537, 131072, 3, 65539, 851990, 3, 65537, 917526, 3, 65539 )

[node name="boss_trigger" type="Area2D" parent="." index="7"]
position = Vector2( 22, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss_trigger" index="0"]
position = Vector2( -6, -1 )
shape = SubResource( 1 )

[node name="TOKEN" type="Label" parent="." index="10"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 75.0
margin_right = 138.0
margin_bottom = 89.0
theme = ExtResource( 11 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.760784, 0.776471, 0.8, 0.701961 )
text = "TOKEN:
*$H29SH"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="boss_died" from="Boss" to="." method="_on_Boss_boss_died"]
[connection signal="update_health" from="Boss" to="." method="_on_Boss_update_health"]
[connection signal="body_entered" from="boss_trigger" to="." method="_on_boss_trigger_body_entered"]
